...

    <!-- Contact info dialog stuff -->
    <string name="default_hidden">Hidden by the advertiser</string>
    <string name="dialog_phone">Phone number:</string>
    <string name="dialog_username">username</string>
    <string name="dialog_email">Email address:</string>
    <string name="dialog_close">Close</string>

    <!-- VirtualTourActivity stuff -->
    <string name="action_account">Account</string>
    <string name="action_logout">Log Out</string>
    <string name="action_map">Map</string>

...
